--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
-[submodule "torch_ex/layer/3d_gaussian/.submodules/diff-gaussian-rasterization"]
-	path = torch_ex/layer/3d_gaussian/.submodules/diff-gaussian-rasterization
+[submodule "torch_ex/layer_n_weight/3d_gaussian/submodules/diff-gaussian-rasterization"]
+	path = torch_ex/layer_n_weight/3d_gaussian/submodules/diff-gaussian-rasterization
 	url = https://github.com/graphdeco-inria/diff-gaussian-rasterization
-[submodule "torch_ex/layer/3d_gaussian/.submodules/simple-knn"]
-	path = torch_ex/layer/3d_gaussian/.submodules/simple-knn
+	branch = main
+[submodule "torch_ex/layer_n_weight/3d_gaussian/submodules/simple-knn"]
+	path = torch_ex/layer_n_weight/3d_gaussian/submodules/simple-knn
 	url = https://gitlab.inria.fr/bkerbl/simple-knn.git
+	branch = main
